--- a/styles.css
+++ b/styles.css
@@ -70,24 +70,18 @@ ul{
     margin-bottom: 50px;
 }
 
-.centered {
-    position: absolute;
-    top: 30%;
-    left: 700px;
-    width: 300px;
-    height: 100px;
-    transform: translate(-50%, -50%);
+.col-12{
+  background-image: url(imgs/011.png);
+  background-size: cover;
+  height: 900px;
+  width: 100%;
+  margin-top: 0px;
+  padding: 20%;
+  color: #67174c;
+  margin-left: 0px;
+}
 
-  }
-  .col-4 img{
-    
-    width: 1000px;
-    padding: 20px;
-    margin-left: 0px;
-    
-    
-    
-  }
+
 
   
 
@@ -103,6 +97,10 @@ ul{
         margin-left: 550px;
         
       }
+      .tablealign{
+        margin-left: -350px;
+      }
+      
       .td {
         text-align: center;
       }
@@ -142,11 +140,11 @@ ul{
      .animation-section{
          margin-top: 20px;
      }
-     .col-6 img{
-        width: 400px;
-        height: 800px;
+     .col-4 img{
+        width: 100%;
+        height: 900px;
         border-radius: 20%;
-        margin-top: -900px;
+        margin-top: -700px;
         margin-left: 950px;
         
     
@@ -164,62 +162,67 @@ ul{
         }
     }
 
-   .contactsection{
+   .footer-container{
     border-radius: 5px;
     background-color: #765372;
-    padding: 5px;
+    padding: 40px;
    }
    input[type=submit] {
     background-color: #9c4a9d;
     color: white;
-    padding:20px 10px;
+    padding:20px 40px;
     border: none;
     cursor: pointer;
+    width: 200px;
   }
   
   input[type=submit]:hover {
-    background-color: #ffffff;
+    background-color: #3a1940;
   }
-  .column {
-    float: left;
-    width: 100px;
-    margin-top: 6px;
-    padding: 20px;
-  }
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+  
   
 
   footer {
+    width: 100%;
     text-align: center;
-    padding: 3px;
+    height: 50px;
     background-color: rgb(255, 255, 255);
     color: rgb(255, 255, 255);
-    display: flex;
-    justify-content: center;
+    height: 50px;
+    margin: 0;
+    list-style: none;
   }
   li a{
     font-family: 'Lato', sans-serif;
     font-weight: bolder;
     font-style: normal;
-    color: #674d5e;
-    text-transform: uppercase;
-    text-decoration: none;
+    color: #ffffff;
+    padding: 20px;
     
+    margin-left: 300px;
+    margin-top: -500px;
+    
+    display: flex;
+    
+    
+    text-decoration: none;
+    list-style: none;
+   
     text-align: center;
-    padding: 40px;
+    
 
   }
   li a:hover{
     color: #820741;
     opacity: 1;
   }
-  
+  form{
+    width: 200px;
+    height: 500px;
+    margin-top: 70px;
+  }
   .copyright{
-    margin-top:250px;
+    margin-top:0px;
     text-align:center;
     font-size:13px;
     color:rgb(0, 0, 0);
